Prevent the map picker from overlapping the title text.  We tried to pin it to the top right, but I couldn't get it to both have decent margins relative to the side of the panel and not overlap a wide title. ------------- Created by MOE: http://code.google.com/p/moe-java MOE_MIGRATED_REVID=57090509

--- a/resource/main.css
+++ b/resource/main.css
@@ -819,10 +819,6 @@ input[type=checkbox]:checked::after {
 .cm-embedded .cm-map-picker-button {
   right: 36px;
 }
-.cm-tab-content .cm-map-picker-button {
-  right: auto;
-  margin-left: 6px;
-}
 
 /* Login */
 .cm-panel div.cm-login {
