--- a/resource/tab_panel.css
+++ b/resource/tab_panel.css
@@ -137,6 +137,12 @@ specific language governing permissions and limitations under the License.
   margin:0;
 }
 
+.cm-tab-content .cm-map-picker-button {
+  margin-left: 6px;
+  top: 0px;
+  position: relative;
+}
+
 .cm-tabbed-legend-box {
   border-top:1px solid #f0f0f0;
   margin: 12px 0;
